# dxFeedCppSample

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: Build.yml  main.yml
dxfeedcpp/: CMakeLists.txt
dxfeedcpp/include/: DXFeed.hpp
dxfeedcpp/include/common/: CMakeLists.txt  DXFCppConfig.hpp
dxfeedcpp/include/connections/: CMakeLists.txt  Connection.hpp  ConnectionStatus.hpp
dxfeedcpp/include/converters/: CMakeLists.txt  DateTimeConverter.hpp  StringConverter.hpp
dxfeedcpp/include/events/: CMakeLists.txt  Candle.hpp  Configuration.hpp  Direction.hpp  Event.hpp  EventFlags.hpp  EventSource.hpp  EventTraits.hpp  EventType.hpp  Greeks.hpp  Order.hpp  OrderScope.hpp  PriceType.hpp  Profile.hpp  Quote.hpp  Series.hpp  Summary.hpp  TheoPrice.hpp  TimeAndSale.hpp  Trade.hpp  Underlying.hpp
dxfeedcpp/include/helpers/: CMakeLists.txt  Handler.hpp  IdGenerator.hpp  LogDumper.hpp
dxfeedcpp/include/processors/: AbstractEventCheckingProcessor.hpp  AbstractEventProcessor.hpp  CMakeLists.txt  CompositeProcessor.hpp
dxfeedcpp/include/subscriptions/: CMakeLists.txt  Subscription.hpp
dxfeedcpp/include/tools/: CMakeLists.txt  EventsCollector.hpp
dxfeedcpp/include/utils/: CMakeLists.txt  Utils.hpp
scripts/: prepare.ps1  prepare.sh
src/: Candle.hpp  DateTimeConverter.hpp  EventsCollector.hpp  EventsDumper.hpp  OrderScope.hpp  Quote.hpp  StringConverter.hpp  main.cpp
src/converters/: DateTimeConverter.hpp  StringConverter.hpp
src/helpers/: Handler.hpp  IdGenerator.hpp  LogDumper.hpp
src/processors/: AbstractEventCheckingProcessor.hpp  AbstractEventProcessor.hpp  CompositeProcessor.hpp
src/tools/: EventsCollector.hpp  EventsDumper.hpp
src/wrappers/: Candle.hpp  Connection.hpp  ConnectionStatus.hpp  DXFCppConfig.hpp  DXFeed.hpp  Event.hpp  EventFlag.hpp  EventFlags.hpp  EventSource.hpp  EventTraits.hpp  EventType.hpp  OrderScope.hpp  Quote.hpp  Subscription.hpp
